# mujoco-models

./: .gitignore  BUILD.bazel
models/unitree_go2/: go2_collision.xml  go2_mjx.xml  go2_mjx_collision.xml  scene_collision.xml  scene_mjx.xml  scene_mjx_collision.xml
models/unitree_h1_2/: BUILD.bazel  h1_2_mjx.xml  scene_h1_2_mjx.xml
